<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="@string/filter"
        android:textSize="@dimen/text_size_subtitle"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_row_padding"
        android:text="@string/filter_explanation"/>


    <CheckBox
        android:id="@+id/filter1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin_inset"
        android:text="@string/law_type_1" />

    <CheckBox
        android:id="@+id/filter2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin_inset"
        android:text="@string/law_type_2" />

    <CheckBox
        android:id="@+id/filter3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin_inset"
        android:text="@string/law_type_3" />


    <CheckBox
        android:id="@+id/filter4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin_inset"
        android:text="@string/law_type_4" />

    <CheckBox
        android:id="@+id/filter5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin_inset"
        android:text="@string/law_type_5" />

    <CheckBox
        android:id="@+id/filter6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin_inset"
        android:text="@string/law_type_6" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_margin="@dimen/activity_row_padding"
        android:background="@color/colorDivider" />

</LinearLayout>
