<?xml version="1.0" encoding="utf-8"?>
<com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/legal_tags"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:flexWrap="wrap"
    app:alignItems="flex_start"
    app:justifyContent="flex_start"
    android:layout_marginBottom="@dimen/small_action_icon_padding"
    android:layout_marginTop="@dimen/small_action_icon_padding"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tag_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_action_icon_padding"
        android:layout_marginStart="@dimen/small_action_icon_padding"
        android:layout_marginTop="@dimen/small_action_icon_padding"
        android:paddingEnd="@dimen/tag_padding"
        android:paddingStart="@dimen/tag_padding"
        android:textColor="@color/colorSecondaryText"
        android:text="@string/law_type_1"
        android:background="@drawable/tag_bg_lawyer1"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tag_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_action_icon_padding"
        android:layout_marginStart="@dimen/small_action_icon_padding"
        android:layout_marginTop="@dimen/small_action_icon_padding"
        android:paddingEnd="@dimen/tag_padding"
        android:paddingStart="@dimen/tag_padding"
        android:text="@string/law_type_2"
        android:textColor="@color/colorSecondaryText"
        android:background="@drawable/tag_bg_lawyer2"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tag_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_action_icon_padding"
        android:layout_marginStart="@dimen/small_action_icon_padding"
        android:layout_marginTop="@dimen/small_action_icon_padding"
        android:textColor="@color/colorSecondaryText"
        android:paddingEnd="@dimen/tag_padding"
        android:paddingStart="@dimen/tag_padding"
        android:text="@string/law_type_3"
        android:background="@drawable/tag_bg_lawyer3"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tag_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_action_icon_padding"
        android:layout_marginEnd="@dimen/small_action_icon_padding"
        android:layout_marginStart="@dimen/small_action_icon_padding"
        android:textColor="@color/colorSecondaryText"
        android:paddingEnd="@dimen/tag_padding"
        android:paddingStart="@dimen/tag_padding"
        android:text="@string/law_type_4"
        android:background="@drawable/tag_bg_lawyer4"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tag_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_action_icon_padding"
        android:layout_marginEnd="@dimen/small_action_icon_padding"
        android:layout_marginStart="@dimen/small_action_icon_padding"
        android:textColor="@color/colorSecondaryText"
        android:paddingEnd="@dimen/tag_padding"
        android:paddingStart="@dimen/tag_padding"
        android:text="@string/law_type_5"
        android:background="@drawable/tag_bg_lawyer5"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tag_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_action_icon_padding"
        android:layout_marginEnd="@dimen/small_action_icon_padding"
        android:textColor="@color/colorSecondaryText"
        android:layout_marginStart="@dimen/small_action_icon_padding"
        android:paddingEnd="@dimen/tag_padding"
        android:paddingStart="@dimen/tag_padding"
        android:text="@string/law_type_6"
        android:background="@drawable/tag_bg_lawyer6"
        android:visibility="gone"/>

</com.google.android.flexbox.FlexboxLayout>
