<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/text_size_title"
            android:text="@string/eua_instructions"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/eua_textbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_margin="16dip"
            android:textSize="@dimen/text_size_subtitle"
            android:textColor="@color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <org.hrana.hafez.view.button.FilterTouchButton
                android:id="@+id/reject"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/reject"
                android:textColor="@color/colorPrimaryText"/>

            <org.hrana.hafez.view.button.FilterTouchButton
                android:id="@+id/accept"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/accept"
                android:textColor="@color/colorPrimaryText" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>
